--- a/style.css
+++ b/style.css
@@ -13,17 +13,20 @@
     --bgOrange: #e84949;
 }
 
+/* default wrapper container style */
 #wrapper {
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
+/* contianer style */
 .container {
     width: 1200px;
     margin: 0 auto;
 }
 
+/* navbar styles */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -72,6 +75,7 @@ a {
     font-weight: bold;
 }
 
+/* hero section styles */
 .hero-section {
     position: relative;
     display: flex;
@@ -95,6 +99,7 @@ a {
     transition: all 3s;
 }
 
+/* hero section left styles */
 .hero-section-left {
     display: flex;
     flex-direction: column;
@@ -166,6 +171,7 @@ a {
     display: none;
 }
 
+/* hero section right styles */
 .hero-section-right {
     position: relative;
 }
@@ -293,6 +299,7 @@ a {
     }
 }
 
+/* projects section styles */
 .projects-section {
     background-color: rgb(231, 231, 231);
     margin-top: 4rem;
@@ -322,7 +329,6 @@ a {
     position: relative;
     box-shadow: 0px 0px 40px #1f1f1f;
 }
-
 
 .project-card::after {
     content: "";
@@ -535,6 +541,7 @@ a {
     }
   }
 
+  /* skills section styles */
   .skills-container {
     position: relative;
     display: flex;
@@ -543,12 +550,14 @@ a {
     gap: 30px;
   }
 
+    /* skill container left styles */
   .skill-container-left {
     width: 50%;
     display: flex;
     flex-direction: column;
   }
 
+  /* skill container right styles */
   .skill-container-right {
     display: flex;
     flex-wrap: wrap;
@@ -615,6 +624,7 @@ a {
     margin: 15px 0;
   }
 
+  /* contact-us section styles */
   .contactus-form-container {
     width: 100%;
     background-color: rgb(231, 231, 231);
@@ -683,6 +693,7 @@ a {
     font-size: 1.5rem;
 }
 
+/* footer section styles */
 footer {
     position: relative;
     margin-top: -1px;
